Add form meeting

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,95 @@
   <title>Document</title>
 </head>
 <body>
-  Lorem ipsum dolor sit amet.
+  <header class="header">
+    <div class="header__title">
+      <span>Meeting</span>
+    </div>
+    <div class="header__options">
+      <a href="./form.html">New Event +</a>
+    </div>
+  </header>
+  <main class="main">
+    <div class="main__name">
+      <div>Name</div>
+      <div>Mon</div>
+      <div>Tue</div>
+      <div>Wed</div>
+      <div>Thu</div>
+      <div>Fri</div>
+    </div>
+    <div class="main__time">
+      <div>10:00</div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="main__time">
+      <div>11:00</div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="main__time">
+      <div>12:00</div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="main__time">
+      <div>13:00</div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="main__time">
+      <div>14:00</div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="main__time">
+      <div>15:00</div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="main__time">
+      <div>16:00</div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="main__time">
+      <div>17:00</div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="main__time">
+      <div>18:00</div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </main>
 </body>
 </html>
